--- a/training/ContinuousWorkflows.qmd
+++ b/training/ContinuousWorkflows.qmd
@@ -13,7 +13,7 @@ cache: false
 bibliography: references.bib
 ---
 
-# Working with Continuous Workflows
+# Working with Continuous Workflows {#sec-continuousWorkflows}
 
 ```{r setup}
 #| include: false
