--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -18,6 +18,8 @@ editor:
 
 *Registration for this workshop is now closed*.
 
+**Update**: links to presentation files have been added to the agenda.
+
 If you missed it, but would like to attend a future workshop, please reach out to [Eliot](../bios/community/aaaeliot.qmd) or
 [Ceres](../bios/community/aaaeliot.qmd) so that we can add you to the wait list.
 
@@ -48,11 +50,15 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | What is SpaDES and why use it?                                                                                           |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/Intro_SpaDESIntro_Ceres.pdf)                                            |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 9:30 - 10:00            | [Introduction to SpaDES modules](https://predictiveecology.org/training/_book/NewModuleIntro.html)                       |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 10:00 - 11:00           | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 11:00 - 11:30           | [Module files and metadata](https://predictiveecology.org/training/_book/MetaDataAndModuleFiles.html)                    |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/ModuleFilesMetadata_Inputs.pdf)                                         |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 11:30 - 12:30           | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
@@ -60,9 +66,13 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 1:30 - 2:00             | [Module inputs](https://predictiveecology.org/training/_book/ModuleInputs.html)                                          |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/ModuleFilesMetadata_Inputs.pdf)                                         |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 2:00 - 3:00             | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 3:00 - 3:30             | [The `simList`](https://predictiveecology.org/training/_book/simList.html)                                               |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/simList.pdf)                                                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 3:30 - free ending\     | WOYO                                                                                                                     |
 | or\                     |                                                                                                                          |
@@ -77,11 +87,15 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Event scheduling](https://predictiveecology.org/training/_book/Scheduling.html)                                         |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/ModsEventsScheduling.pdf)                                               |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 9:30 - 11:00            | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 11:00 - 11:30           | [Continuous workflows](https://predictiveecology.org/training/_book/ContinuousWorkflows.html)                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Caching](https://predictiveecology.org/training/_book/Caching.html)                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/ContinuousWFsCaching.pdf)                                               |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 11:30 - 12:30           | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
@@ -89,11 +103,15 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 1:30 - 2:00             | [`prepInputs()`](https://predictiveecology.org/training/_book/prepInputs.html)                                           |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/prepInputs.pdf)                                                         |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 2:00 - 3:00             | WOYO                                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 3:00 - 3:30             | [SpaDES workflows and projects with `setupProject`](https://predictiveecology.org/training/_book/setupProject.html)      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [A simple workflow for an ecological example](https://predictiveecology.org/training/_book/workflowSimple2.html)         |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/setupProject.pdf)                                                       |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 3:30 - free \| WOYO     |                                                                                                                          |
 | ending  \| or\          |                                                                                                                          |
@@ -106,6 +124,8 @@ Presentation slides will be added at the end of each day.
 | 8:30 - 9:00             | Revisit previous WOYO and Day 2                                                                                          |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 9:00 - 9:30             | Flexibility comes at a cost, but it's worth it!                                                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Download presentation](Presentations/2024-06-11/costOfFlexibility.pdf)                                                  |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 9:30 - 10:00            | [Forest landscape modelling - parameterisation,                                                                          |
 |                         | simulation/prediction](https://predictiveecology.org/training/_book/LandRDemo_coreVeg.html)                              |
