--- a/training/intro.qmd
+++ b/training/intro.qmd
@@ -82,6 +82,10 @@ From
 
 ### I use `targets` for my workflows. How does SpaDES differ?
 
+[`targets`](https://books.ropensci.org/targets/) is an R package (descendant of `drake`), 
+very similar to [GNU Make](https://www.gnu.org/software/make/), 
+that facilitates building data analyses pipelines.
+
 There are two major differences between `targets` and the SpaDES
 approach:
 
